# DTransformer

./: .gitignore  config.json  pyproject.toml
data/: datasets.toml
data/eedi/: metadata.txt  test.txt
scripts/: convert_eedi.py  train.py
