[project]
name = "DTransformer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas>=2.3.0",
    "scikit-learn",
    "scipy",
    "tomlkit",
    "torch",
    "tqdm",
    "wandb>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest",
    "python-lsp-ruff",
    "python-lsp-server",
    "ruff",
]

[tool.setuptools]
packages = ["DTransformer"]

[tool.ruff.lint]
ignore = ["E741", "F401"]
